--- a/WcfWithDI/Web.config
+++ b/WcfWithDI/Web.config
@@ -1,15 +1,20 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings/>
+  <!--
+    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
-  <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-  </appSettings>
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime/>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.serviceModel>
-    
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_Services" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered" useDefaultWebProxy="true">
@@ -26,7 +31,6 @@
         </binding>
       </webHttpBinding>
     </bindings>
-    
     <services>
       <service behaviorConfiguration="ServiceBehaviour" name="WcfWithDI.Service1">
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" bindingConfiguration="webBinding" contract="WcfWithDI.Interfaces.IService1"/>
@@ -48,9 +52,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -60,5 +64,4 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
 </configuration>
