--- a/WcfWithDI/Web.config
+++ b/WcfWithDI/Web.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="StructureMap" type="StructureMap.Configuration.StructureMapConfigurationSection, StructureMap"/>
+  </configSections>
   <appSettings/>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -14,6 +17,10 @@
     <httpRuntime/>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+
+  <StructureMap MementoStyle="Attribute">
+    <DefaultInstance PluginType="WcfWithDI.Interfaces.INeeded, WcfWithDI" PluggedType="WcfWithDI.Library.Needed, WcfWithDI"/>
+  </StructureMap>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
